--- a/recruitment.html
+++ b/recruitment.html
@@ -36,7 +36,7 @@
 </section>
 
 <section class="recruitment-benefits">
-    <h2>Why Join Us?</h2>
+    <h2 style="color: black;">Why Join Us?</h2>
     <div class="benefits-grid">
         <div class="benefit-item">🔥 Competitive PvP & Tournaments</div>
         <div class="benefit-item">🎯 Strategy-Based Training</div>
