--- a/index.html
+++ b/index.html
@@ -115,22 +115,27 @@
 
     
     <section id="news">
-    <h2>Latest News & Updates</h2>
+    <h2 class="hidden from-top">Latest News & Updates</h2>
     <div class="news-container">
         <div class="news-item">
-            <h3>🏆 SHO Tournament 2.0 Begins!</h3>
+            <h3 class="hidden from-right">🏆 SHO Reliable Tournament Begins!</h3>
             <p>Our biggest tournament is live! Check out the fixtures and results.</p>
-            <a href="#">Read More</a>
+            <a href="tournaments.html">Read More</a>
         </div>
         <div class="news-item">
-            <h3>🔥 New Recruitment Drive</h3>
+            <h3 class="hidden from-left">🔥 New Recruitment Drive</h3>
             <p>We're looking for top players! Join SHO and be part of an elite squad.</p>
-            <a href="#">Apply Now</a>
+            <a href="recruitment.html">Apply Now</a>
         </div>
         <div class="news-item">
-            <h3>🚀 Alliance Championship Update</h3>
-            <p>SHO Alliances are dominating the leaderboard! Stay tuned for updates.</p>
-            <a href="#">View Rankings</a>
+            <h3 class="hidden from-right">🚀 Youth Championship Update</h3>
+            <p>SHO Alpha has emerged as YC 18 champion .</p>
+            <a href="achivements.html">View achievements</a>
+        </div>
+        <div class="view-more-container hidden from-bottom">
+        <a href="news.html" target="_blank" class="view-more-btn">
+            View More news
+        </a>
         </div>
     </div>
     </section>
