--- a/news.html
+++ b/news.html
@@ -78,6 +78,10 @@
 <body>
     <header>
         <div class="nav-container">
+
+            <div class="logo hidden from-left">
+        <img src="images/sho-logo.png" alt="SHO Logo">
+            </div>
             <h1 class="sho-heading">||SHO|| NEWS</h1>
             <nav class="navbar">
                 <button class="side-menu-btn" onclick="toggleSideMenu()">☰ Menu</button>
