--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="tournaments.html">Tournaments</a>
             <a href="news.html">News</a>
             <a href="recruitment.html">Recruitment</a>
+            <a href="strategy.html">Strategy</a>
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
         </div>
