--- a/tournaments.html
+++ b/tournaments.html
@@ -102,6 +102,53 @@
       text-decoration: none;
       font-weight: bold;
     }
+      @media (max-width: 768px) {
+  .nav-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    position: relative;
+    z-index: 999;
+  }
+
+  .side-menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 250px;
+    height: 100vh;
+    background-color: #1e1e1e;
+    padding: 20px;
+    z-index: 1001;
+    transition: right 0.3s ease-in-out;
+  }
+
+  .side-menu.open {
+    right: 0;
+  }
+
+  .sho-heading {
+    font-size: 1.4rem;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .side-menu-btn {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #ffd700;
+    color: black;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  .logo img {
+    max-width: 60px;
+  }
+      }
   </style>
 </head>
 <body>
