--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a href="strategy.html">Strategy</a>
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contact</a>
+            <a href="admin.html">RESTRICTED PAGE🚫</a>
         </div>
     </nav>
       
